# ml-teams-tech-test-main

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
data/: report.csv
src/: __init__.py  analyser.py  main.py
src/models/: __init__.py  call.py  operator.py
src/services/: __init__.py  operator_lookup.py  risk_calculator.py
tests/: test_analyser.py
tests/models/: test_call.py  test_operator.py
tests/services/: test_operator_lookup.py  test_risk_calculator.py
